--- a/projekt/kontakt.html
+++ b/projekt/kontakt.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>Website</title>
+        <title>Kontakt</title>
       </head>
     <body>
         <div class="banner">
