--- a/projekt/pocetna.html
+++ b/projekt/pocetna.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>Moja stranica</title>
+        <title>Pocetna</title>
       </head>
     <body>
         <div class="banner">
